tests/ui/coercion/fudge-inference/fudge-eager-resolve-breakage-1.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> $DIR/fudge-eager-resolve-breakage-1.rs:10:29
   |
LL |     map::<T>(T::create_from(|| ()));
   |     ------------------------^^-----
   |     |                       |
   |     |                       this closure implements `FnOnce`, not `Fn`
   |     the requirement to implement `Fn` derives from here
   |
note: required by a bound in `map`
  --> $DIR/fudge-eager-resolve-breakage-1.rs:7:50
   |
LL | fn map<T: Trait>(_: T::Assoc<impl FnOnce(), impl Fn()>) {}
   |                                                  ^^^^ required by this bound in `map`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0525`.
